@@ -1,5 +1,11 @@
 2007-10-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
+	* Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs: Use
+	  Exception.ToString () instead of Exception.Message when logging
+	  gnome-keyring-sharp exceptions.
+
+2007-10-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
 	* NEWS: Updated NEWS for 0.8.1.
 
 2007-10-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 
